--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
     <section id="resume">
         <div class="container">
             <h2>Resume</h2>
-            <p><a href="Vedant_Kurundkar_Resume.pdf" download class="btn">Download My Resume 📥</a></p>
+            <p><a href="Vedant Kurundkar.pdf" download class="btn">Download My Resume 📥</a></p>
             <div class="experience">
                 <h3>Work Experience</h3>
                 <ul>
